<resources>
    <string name="app_name">Skywarn Weather Database</string>
    <string name="refreshing">refreshing</string>
    <string name="please_wait">Please Wait</string>
    <string name="login_text">Login</string>
    <string name="settings_icon_title">Settings</string>
    <string name="action_settings">Action Settings</string>
    <string name="username">Username</string>
    <string name="or">Or</string>
    <string name="date">Date</string>
    <string name="weather_event_type">Weather Event Type</string>
    <string name="severe_weather">Severe Weather</string>
    <string name="rainfall_flooding">Rainfall/Flooding</string>
    <string name="coastal_flooding">Coastal Flooding</string>
    <string name="winter">Winter</string>
    <string name="next">Next</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="comments">Comments</string>
    <string name="current_temperature">Current Temperature</string>
    <string name="weather_event">Weather Event</string>
    <string name="longitude">Longitude</string>
    <string name="lattitude">Lattitude</string>
    <string name="app_title">Skywarn Weather Database</string>
    <string name="submit_report_button_title">Submit Report</string>
    <string name="riverFlood">River Flood</string>
    <string name="precipRateLabel">Precipitation Rate</string>
    <string name="creekStreamFloodingLabel">Creek/Stream FLooding</string>
    <string name="streetFLoodingLabel">Street Flooding</string>
    <string name="largeRiverFloodLabel">Large River Flood</string>
    <string name="iceJamFloodLabel">Ice Jam Flood</string>
    <string name="submit_button_label">Submit</string>
    <string name="upload_photo_icon">Photo Icon</string>
    <string name="upload_photo_label">Upload Photo</string>
    <string name="winter_features">Winter Features</string>
    <string name="snowfall">Snowfall</string>
    <string name="snowfall_rate">Snowfall Rate</string>
    <string name="snowfall_depth">Snowfall Depth</string>
    <string name="water_equivalent">Water Equivalent</string>
    <string name="freezing_rain">Freezing Rain</string>
    <string name="thundersnow">Thundersnow</string>
    <string name="whiteout">Whiteout</string>
    <string name="blowdrift">Blowdrift</string>
    <string name="sleet">Sleet</string>
    <string name="severe_weather_type">Severe Weather Type</string>
    <string name="windspeed">Windspeed</string>
    <string name="wind_gust">Wind Gust</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="hail_size">Hail Size</string>
    <string name="tornado">Tornado</string>
    <string name="barometer">Barometer</string>
    <string name="downed_trees">Downed Trees</string>
    <string name="downed_limbs">Downed Limbs</string>
    <string name="limb_diameter">Limb Diameter</string>
    <string name="downed_poles">Downed Poles</string>
    <string name="downed_wires">Downed Wires</string>
    <string name="wind_damage">Wind Damage</string>
    <string name="lightning_damage">Lightning Damage</string>
    <string name="damage_comments">Damage Comments</string>
    <string name="rain_and_flood_features">Rain and Flood Features</string>
    <string name="rain">Rain</string>
    <string name="report_details">Report Details</string>
    <string name="coastal_flooding_features">Coastal Flooding Features</string>
    <string name="coastal_area">Coastal Area</string>
    <string name="first_floor_flood">First Floor Flood</string>
    <string name="storm_surge">Storm Surge</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="miles">Miles</string>
    <string name="search_radius">Search Radius</string>
    <string name="town">Town</string>
    <string name="address">Address</string>
    <string name="submit_report">Submit Report</string>
    <string name="single_day">Single Day</string>
    <string name="button">Button</string>
    <string name="weather_type">Weather Type</string>
    <string name="i_e_tornado_hurricane_hail_lightning">i.e. tornado, hurricane, hail, lightning</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_settings">User Settings</string>
    <string name="report">Report</string>
    <string name="search">Search</string>
    <string name="friends">Friends</string>
    <string name="twitter">Twitter</string>
    <string name="network">Network</string>
    <string name="account_settings">Account Settings</string>
    <string name="send">Send</string>
    <string name="submit">Submit</string>
    <string name="facebook">facebook</string>
    <string name="home">Home</string>
    <string name="user">User</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit_page">SUBMIT PAGE</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="manbun69">ManBun69</string>
    <string name="jatronix_beardvapping_org">JAtronix@beardVapping.org</string>
    <string name="textview">TextView</string>
    <string name="event_comments">Event Comments</string>
    <string name="location">Location</string>
    <string name="weatherevent">WeatherEvent</string>
    <string name="search_reports">Search Reports</string>
    <string name="onSubmitScanClick">onSubmitScanClick</string>
    <string name="onClickTagMessage">onClick() os submitButton</string>
    <string name="take_new_photo">Take New Photo</string>
    <string name="open_existing">Open Existing</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_photos_to_report">Add Photos to Report</string>
    <string name="return_home">Return Home</string>
    <string name="submission_confirmed">Submission Confirmed</string>
    <string name="email">Email</string>
    <string name="signup">SignUp</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="create_new_profile">Create New Profile</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_user">Confirm User</string>
    <string name="a_confirmation_code_has_been_sent_to_the_email_provided_at_sign_up_please_enter_it_below">A confirmation code has been sent to the email provided at sign up. Please enter it below.</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="add_photos">Add Photos</string>
    <string name="weather_spotter_credentials">Weather Spotter Credentials</string>
    <string name="affiliation">Affiliation</string>
    <string name="weather_spotter">Weather Spotter</string>
    <string name="spotter_id">Spotter ID</string>
    <string name="call_sign">Call Sign</string>
    <string name="enter_below_fields_if_you_are_a_certified_weather_spotter">*Enter below fields if you are a certified weather spotter</string>
    <string name="the_fields_below_are_required">*The fields below are required.</string>
    <string name="title_activity_tabbed_user_home">TabbedUserHomeActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="last_active">Last Active</string>
    <string name="relevant_reports">Relevant Reports</string>
    <string name="report_statistics">Report Statistics</string>
    <string name="user_information">User Information</string>
    <string name="filter">Filter</string>
    <string name="reset_password">Reset Password</string>
    <string name="a_confirmation_code_has_been_sent_to_your_email_please_enter_it_below">A confirmation code has been sent to your email. Please enter it below.</string>
    <string name="a_confirmation_code_has_been_sent_to_your_email_please_enter_it_and_the_new_password_below">A confirmation code has been sent to your email. Please enter it and the new password below.</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="new_password">New Password</string>
    <string name="reset">Reset</string>
    <string name="enter_username_associated_with_account">Enter username associated with account</string>
    <string name="request_confirmation_code">Request Confirmation Code</string>
    <string name="reset_password_enter_username">Reset Password: Enter username</string>
    <string name="enter_username_associated_with_account_a_confirmation_code_will_be_sent_to_the_accounts_email_address">Enter username associated with account. A confirmation code will be sent to the accounts email address.</string>
    <string name="reset_password_dialog_title">Reset Password: Enter username</string>
    <string name="enter_username_associated_with_account_this_is_where_the_confirmation_code_will_be_sent">Enter username associated with account. This is where the confirmation code will be sent.</string>
    <string name="enter_reset_code_and_new_password_below">Enter reset code and new password below.</string>
    <string name="title_activity_tabbed_user_home2">TabbedUserHomeActivity2</string>
    <string name="certification_information">Certification Information</string>
    <string name="joined">Joined:</string>
    <string name="reports_submitted">Reports Submitted:</string>
    <string name="last_active_">Last Active:</string>
    <string name="misc">Misc</string>
    <string name="view_on_map">View On Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_activity_layout">Map Activity Layout</string>
    <string name="switch_to_map_view">Switch to Map View</string>
    <string name="submit_a_report">Submit a Report</string>
    <string name="time">Time</string>
    <string name="report_rating">Report Rating</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="photos">Photos</string>
    <string name="freezing_rain_accumulation">Freezing Rain Accumulation</string>
    <string name="fatalities">Fatalities</string>
    <string name="injuries">Injuries</string>
    <string name="user_details">User Details</string>
    <string name="username2">Username:</string>
    <string name="call_sign1">Call Sign:</string>
    <string name="spotter_id3">Spotter ID:</string>
    <string name="affiliation1">Affiliation:</string>
    <string name="reports_submitted_by_user">Reports Submitted by User</string>
    <string name="date_submitted">Date Submitted:</string>
    <string name="event">Event:</string>
    <string name="severe_weather_features">Severe Weather Features</string>
    <string name="google_geocoder_api_key">AIzaSyDH2J3guJF68Eet85VUrfMPpo2U2iLcI-E</string>
    <string name="submited_by">"Submitted by  "</string>
    <string name="rating">"Rating: "</string>
    <string name="rain_and_flooding_event">Rain and Flooding Event</string>
    <string name="general_information">General Information</string>
    <string name="upload_existing">Upload Existing</string>
    <string name="continue_without_adding_photos">Continue without Adding Photos</string>
    <string name="take_new_video">Take New Video</string>
    <string name="date_and_time">Date and Time</string>
    <string name="date_range">Date Range</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="number_of_reports_to_submit">Number of Reports to Submit</string>
    <string name="coastal">Coastal</string>
    <string name="severe">Severe</string>
</resources>