<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item android:title="@string/report">
        <menu>
                <item
                    android:title="@string/submit"
                    android:id="@+id/drawer_nav_submit_item"
                    android:icon="@drawable/submit_icon" />
                <item
                    android:title="@string/search"
                    android:id="@+id/drawer_nav_search_item"
                    android:icon="@drawable/search_icon" />
        </menu>
    </item>

    <item android:title="@string/user">
        <menu>
            <item
                android:id="@+id/drawer_nav_home_item"
                android:title="@string/home"
                android:icon="@drawable/home_icon"/>
            <item
                android:id="@+id/drawer_nav_account_settings_item"
                android:title="@string/account_settings"
                android:icon="@drawable/settings_icon"/>
        </menu>
    </item>

    <item android:title="@string/network">
        <menu>
            <item
                android:id="@+id/drawer_nav_friends_item"
                android:icon="@drawable/friends_icon"
                android:title="@string/friends" />
            <item
                android:id="@+id/drawer_nav_facebook_item"
                android:icon="@drawable/facebook48"
                android:title="@string/facebook" />
            <item
                android:id="@+id/drawer_nav_twitter_item"
                android:icon="@drawable/twitter_icon"
                android:title="@string/twitter" />
        </menu>
    </item>
</group>

</menu>
