<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_rev2"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/submit_activity_title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:background="@color/backgroundColor"
                android:padding="5dp"
                android:text="@string/submit_a_report"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@color/cardview_light_background"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/submit_activity_location_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/location"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/submit_activity_street_text_field"
                android:layout_marginTop="42dp"
                android:hint="@string/address"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_margin="5dp" />

            <EditText
                android:id="@+id/submit_activity_town_text_field"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="14dp"
                android:ems="10"
                android:hint="@string/city"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/submit_activity_state_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/state"
                android:inputType="textPersonName" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:id="@+id/submit_activity_zip_text_field"
                android:hint="@string/zip"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_marginTop="21dp"
                android:layout_margin="5dp" />

            <TextView
                android:id="@+id/submit_activity_date_label"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_below="@+id/submit_activity_zip_text_field"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/date"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                tools:ignore="ObsoleteLayoutParam" />

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/submit_report_date_picker"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:foregroundGravity="center_vertical" />

            <TextView
                android:text="@string/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/time_text_label"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="@android:color/background_dark"
                android:layout_margin="5dp" />

            <TimePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/timePicker"
                android:background="@android:color/transparent" />

            <TextView
                android:id="@+id/submit_activity_weather_event_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/weather_event_type"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:text="@string/severe_weather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/submit_activity_severe_weather_checkbox"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                   />

                <CheckBox
                    android:text="@string/rainfall_flooding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/submit_activity_rainfall_flooding_checkbox"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                   />

                <CheckBox
                    android:text="@string/coastal_flooding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/submit_activity_coastal_flooding_checkbox"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                    />

                <CheckBox
                    android:text="@string/winter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/submit_activity_winter_checkbox"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                    />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:text="@string/general_information"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/submit_report_activity_temperature_field_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/current_temperature"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/submit_report_activity_comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/comments"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView34"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_horizontal|fill_horizontal"
                    android:padding="5dp"
                    android:text="@string/number_of_reports_to_submit"
                    android:textAlignment="center"
                    android:textColor="@color/cast_expanded_controller_background_color"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/increment_number_reports_button"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/plus_sign" />

                <TextView
                    android:id="@+id/number_of_reports_TV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/cast_expanded_controller_background_color"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/decrement_number_reports_button"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/minus_sign" />
            </LinearLayout>

            <Button
                android:text="@string/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/submit_activity_button_to_next_screen"
                />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>