<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout = "@layout/toolbar_rev2"/>
    <TextView
        android:text="@string/reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        android:textSize="28sp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp" />

    <TextView
        android:text="@string/a_confirmation_code_has_been_sent_to_your_email_please_enter_it_and_the_new_password_below"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView17"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textColor="@color/cast_expanded_controller_background_color"

        android:textAlignment="textStart" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/reset_pw_confirmation_codeTV"
        android:hint="@string/confirmation_code"
        android:layout_margin="10dp"
        android:padding="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/new_passwordTV"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:hint="@string/new_password"
        android:layout_marginBottom="40dp" />

    <Button
        android:text="@string/reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit_reset_pw_button"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:layout_marginTop="30dp" />
</LinearLayout>