<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/search_reports"
        android:title="@string/search_reports"
        android:icon="@drawable/search_icon"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/settings_icon"
        android:orderInCategory="4"
        app:showAsAction="never" />

    <item
        android:id="@+id/user_home_icon"
        android:title="@string/home"
        android:icon="@drawable/home_icon"
        android:orderInCategory="3"
        app:showAsAction="never" />
</menu>