<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundColor"
            android:gravity="fill_vertical|center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView41"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/backgroundColor"
                android:text="@string/weather_event_type"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox
                android:id="@+id/rain_attribute_CB"
                style="@android:style/Widget.Holo.Light.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rain" />

            <CheckBox
                android:id="@+id/coastal_attribute_CB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coastal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/winter_attribute_CB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/winter" />

            <CheckBox
                android:id="@+id/severe_attribute_CB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/severe" />

        </TableRow>


    </TableLayout>
</LinearLayout>