<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <TextView
        android:text="@string/reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView22"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/cast_expanded_controller_text_color"
        android:background="@color/backgroundColor"
        android:padding="10dp"
        android:layout_margin="10dp" />

    <TextView
        android:text="@string/enter_reset_code_and_new_password_below"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView23"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_margin="5dp"
        android:padding="2dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/reset_password_confirmation_codeTV"
        android:hint="@string/confirmation_code"
        android:layout_margin="10dp"
        android:padding="10dp"
        tools:ignore="TextFields" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/reset_password_new_passwordTV"
        tools:ignore="TextFields"
        android:hint="@string/new_password"
        android:padding="10dp"
        android:layout_margin="10dp" />

</LinearLayout>